@@ -1,3 +1,4 @@
+* Use tubeconn from sugar.presence
 * #3138: Apply sugar.graphics API change (morgs)
 * Remove self.set_title - allows title to be changed (morgs)
 
